Changelog for UCDPloneSkin

UCDPloneSkin 2.0 in progress - Released - Apr, 14 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - option for two rows of portal_tabs or one row of blue portal_tabs now
      works with automatic tab generation turned off (i.e. portal_actions)

UCDPloneSkin 2.0 in progress - Released - Apr, 12 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - removed icon option from new left nav, didn't work with IE
    - Adjusted portal tabs spacing for IE and FF/Win, correctly this time

UCDPloneSkin 2.0 in progress - Released - Apr, 11 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - removed border in admin left nav
    - deleted getSections.py as it isn't needed with the new left nav
    - current left nav item is now bold

UCDPloneSkin 2.0 in progress - Released - Apr, 10 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - New left nav works
      - Added configlet option for left nav icons

UCDPloneSkin 2.0 in progress - Released - Apr, 03 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - Continued stylizing new left nav
    - Adjusted portal tabs spacing

UCDPloneSkin 2.0 in progress - Released - Apr, 02 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - Fixed accesskeys again (forgot to commit prior changes) 
    - Started to stylize new left nav

UCDPloneSkin 2.0 in progress - Released - Mar, 30 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - Removed portlet_left_nav, switched to stock plone navigation
      - Split dept info and quicklinks into separate portlets

UCDPloneSkin 2.0 in progress - Released - Mar, 07 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - Fixed typo in ploneCustom.css
    - Added member_search_form.pt

UCDPloneSkin 2.0 in progress - Released - Mar, 07 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - Fixed nav border problem that occured when user places all tabs in
      the second row (i.e. one blue row)
